--- a/app/partials/teste.html
+++ b/app/partials/teste.html
@@ -1,5 +1,4 @@
-<p>This is the partial for view 2.</p>
-<p>
+<div class="alert alert-info text-center">
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+</div>
